--- a/index.html
+++ b/index.html
@@ -3,34 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery with Filter</title>
+    <title>Futuristic Image Gallery Carousel</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Image Gallery</h1>
-
-  
-    <div class="filter-container">
-        <button class="filter-btn" data-category="all">All</button>
-        <button class="filter-btn" data-category="nature">Nature</button>
-        <button class="filter-btn" data-category="animals">Animals</button>
-        <button class="filter-btn" data-category="architecture">Architecture</button>
+    <div class="container">
+        <header class="header">
+            <h1>Image Gallery</h1>
+            <p>Explore a collection of amazing filtered images.</p>
+        </header>
+        <div class="carousel-wrapper">
+            <div class="carousel">
+                <div class="carousel-item active"><img src="./11224940.jpg" alt="Nature"></div>
+                <div class="carousel-item"><img src="./8230737.jpg" alt="City"></div>
+                <div class="carousel-item"><img src="./9146668.png" alt="Technology"></div>
+                <div class="carousel-item"><img src="./marek-pavlik-nthqSZ87Fd8-unsplash.jpg" alt="Nature"></div>
+                <div class="carousel-item"><img src="./nemo-jcn2HSry26E-unsplash.jpg" alt="City"></div>
+                <div class="carousel-item"><img src="./studio_pc_2328_37.jpg" alt="Technology"></div>
+            </div>
+            <div class="filter-bar">
+                <button class="filter-button glass-button" onclick="changeSlide(-1)"><i class="fas fa-chevron-left"></i> Prev</button>
+                <button class="filter-button glass-button" onclick="changeSlide(1)">Next <i class="fas fa-chevron-right"></i></button>
+            </div>
+        </div>
     </div>
-
-
-    <div class="gallery-container">
-        <div class="image" data-category="nature">
-            <img src="path-to-your-image/nature1.jpg" alt="Nature">
-        </div>
-        <div class="image" data-category="animals">
-            <img src="path-to-your-image/animals1.jpg" alt="Animals">
-        </div>
-        <div class="image" data-category="architecture">
-            <img src="path-to-your-image/architecture1.jpg" alt="Architecture">
-        </div>
-
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
